--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,21 @@
 {
 	"name": "Mars Rover Photo Search",
+	"short_name": "Mars Rover",
+	"start_url": ".",
 	"icons": [
 		{
 			"src": "/android-chrome-96x96.png",
 			"sizes": "96x96",
 			"type": "image/png"
+		},
+		{
+			"src": "/mstile-150x150.png",
+			"sizes": "150x150",
+			"type": "image/png"
 		}
 	],
 	"theme_color": "#0e68b1",
 	"background_color": "#0e68b1",
-	"display": "standalone"
+	"display": "standalone",
+	"orientation": "portrait"
 }
