--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,28 @@
 	"start_url": ".",
 	"icons": [
 		{
-			"src": "/android-chrome-96x96.png",
+			"src": "./assets/icons/android-chrome-96x96.png",
 			"sizes": "96x96",
 			"type": "image/png"
 		},
 		{
-			"src": "/mstile-150x150.png",
+			"src": "./assets/icons/mstile-150x150.png",
 			"sizes": "150x150",
+			"type": "image/png"
+		},
+		{
+			"src": "./assets/icons/icon-512x512.png",
+			"sizes": "512x512",
+			"type": "image/png"
+		},
+		{
+			"src": "./assets/icons/icon-384x384.png",
+			"sizes": "384x384",
+			"type": "image/png"
+		},
+		{
+			"src": "./assets/icons/icon-256x256.png",
+			"sizes": "256x256",
 			"type": "image/png"
 		}
 	],
