--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "Retrieve photos from a Mars rover",
 	"main": "config.js",
 	"dependencies": {
+		"babel-cli": "^6.26.0",
 		"babel-preset-es2015": "^6.24.1",
 		"babili": "^0.1.4"
 	},
