--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
 	"description": "Retrieve photos from a Mars rover",
 	"main": "config.js",
 	"dependencies": {
-		"babel-cli": "^6.26.0",
-		"babel-preset-es2015": "^6.24.1",
-		"babili": "^0.1.4"
+		"babel-minify": "^0.5.0",
+		"babel-preset-env": "^1.7.0"
 	},
-	"devDependencies": {},
+	"devDependencies": {
+		"babel-cli": "^6.26.0"
+	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
